# ShellRPG-client

./: .gitignore  README.en.md  README.md  gitignore  pyproject.toml  shellrpg.manifest.toml
docs/: capability-detection.md  terminal-layout.md
docs-private/: ShellRPG-server-private.md  phase-d-notes.md  phase-e-notes.md  revision-playbook.md
src/shellrpg_client/: __init__.py  __main__.py  api_client.py  app.py  terminal_layout.py  ui.py  version.py
src/shellrpg_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/shellrpg_client/commands/: registry.py
src/shellrpg_client/contracts/: public_status.py
src/shellrpg_client/embedded_www/public/: index.html
src/shellrpg_client/embedded_www/src/: app.js
src/shellrpg_client/embedded_www/src/i18n/: de.json  (+1 more)
src/shellrpg_client/render/: fallbacks.py
src/shellrpg_client/session/: view_models.py
src/shellrpg_client/statusline/: model.py  spinner.py
src/shellrpg_server/: __init__.py  __main__.py  app.py  game_data.py
src/shellrpg_server/ai/: __init__.py  cube_proxy.py
src/shellrpg_server/api/: http.py
src/shellrpg_server/combat/: rounds.py
src/shellrpg_server/contracts/: public_api.py
src/shellrpg_server/core/: bootstrap.py  engine.py  models.py  world_seed.py
src/shellrpg_server/economy/: market.py
src/shellrpg_server/riddles/: models.py
src/shellrpg_server/session/: state.py
src/shellrpg_server/tick/: models.py
src/shellrpg_server/world/: fow.py  tiles.py
tests/: test_entrypoint.py  test_foundations.py  test_phase_e.py  test_terminal_layout.py  test_v076.py  test_vertical_slice.py
(+7 files in other folders)
