[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shellrpg-client"
version = "0.7.6"
description = "Public shell-native Phase G client for ShellRPG."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["psutil>=5.9"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["shellrpg_client*"]
